# estacionamiento-tienda

./: .gitignore  ACTUALIZACIONES_AUTOMATICAS_RESUMEN.md  AUDITORIA.md  INSTRUCCIONES_SECRETS_GITHUB.md  NOTIFICACIONES_API.md  NOTIFICACIONES_ESTADO.md  NOTIFICACIONES_RESUMEN.md  README.md  RELEASE_NOTES.md  SETUP_SECRETS.md  VERSIONADO.md  index.html  notificaciones_pendientes.json  package-lock.json  package.json  recordatorio_automatico.py  servidor_proxy_notificaciones.py  tailwind.config.js  test-notificacion.sh  test_notificacion.py  vite.config.ts
.github/workflows/: main.yml
scripts/: generate-latest-json.js  sync-version.js  update-readme.js
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  latest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Baños.tsx  BitacoraLogs.tsx  CobroTicket.tsx  ConfigImpresora.tsx  Dashboard.tsx  Estacionamiento.tsx  GestionModulos.tsx  Inventario.tsx  Login.tsx  NotificacionesMensualidad.tsx  Paqueteria.tsx  Productos.tsx  Reportes.tsx  Sidebar.tsx  UpdateChecker.tsx  Usuarios.tsx  Ventas.tsx  VentasRegistradas.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAuth.ts  useUpdater.ts
src/lib/: Constantes.ts  CreateTicket.ts  Functions.ts  Functions.tsx  Logger.ts  ThermalPrinter.ts  db.ts  version.ts
