[package]
name = "estacionamiento-tienda"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "estacionamiento_tienda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", default-features = false, features = ["wry"] }

tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1.45", features = ["full"] }
dirs = "6.0.0"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2"
axum = "0.7.9"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Optimizaciones para compilación más rápida en desarrollo
[profile.dev]
opt-level = 1          # Optimización ligera para builds más rápidos
incremental = true     # Habilita compilación incremental

[profile.dev.package."*"]
opt-level = 2          # Optimiza dependencias más que tu código

# Para builds de producción
[profile.release]
strip = true           # Elimina símbolos de debug
lto = true            # Link-time optimization
codegen-units = 1     # Mejor optimización pero más lento
opt-level = "z"       # Optimiza para tamaño
